--- a/CookSmart/Views/Base.lproj/Main.storyboard
+++ b/CookSmart/Views/Base.lproj/Main.storyboard
@@ -583,6 +583,9 @@
                                 <state key="normal" title="NEXT">
                                     <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonNextPressed:" destination="FnW-vq-r5r" eventType="touchUpInside" id="NXw-NK-8n2"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHOSE INGREDIENTS" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HNZ-UG-jpz">
                                 <rect key="frame" x="0.0" y="88" width="414" height="48"/>
@@ -608,11 +611,59 @@
                     <navigationItem key="navigationItem" id="KII-Xd-Lc9"/>
                     <connections>
                         <outlet property="tableView" destination="F52-t6-ddb" id="xKc-gQ-cnr"/>
+                        <segue destination="uj6-xe-04v" kind="show" identifier="SequeToSelectedRecipesIndentifier" id="gnR-aD-RFf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CaZ-sn-mQE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-630" y="4051"/>
+        </scene>
+        <!--Selected Recipes View Controller-->
+        <scene sceneID="TGM-Zv-enh">
+            <objects>
+                <viewController id="uj6-xe-04v" customClass="SelectedRecipesViewController" customModule="CookSmart" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EhI-4Z-KZq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHOSE 5 RECIPES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Q0-bC-lr3">
+                                <rect key="frame" x="0.0" y="88" width="414" height="48"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="V2g-R3-Q0B">
+                                <rect key="frame" x="0.0" y="146" width="414" height="587"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHf-xg-AhJ">
+                                <rect key="frame" x="0.0" y="743" width="414" height="60"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" name="ColorGrey"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="DcR-66-pKi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9Q0-bC-lr3" firstAttribute="trailing" secondItem="DcR-66-pKi" secondAttribute="trailing" id="0gr-ki-FP8"/>
+                            <constraint firstItem="DcR-66-pKi" firstAttribute="bottom" secondItem="nHf-xg-AhJ" secondAttribute="bottom" constant="10" id="Axj-on-h8G"/>
+                            <constraint firstItem="V2g-R3-Q0B" firstAttribute="leading" secondItem="DcR-66-pKi" secondAttribute="leading" id="Rmm-Bw-Y4U"/>
+                            <constraint firstItem="9Q0-bC-lr3" firstAttribute="top" secondItem="DcR-66-pKi" secondAttribute="top" id="SPY-cx-rGu"/>
+                            <constraint firstItem="nHf-xg-AhJ" firstAttribute="top" secondItem="V2g-R3-Q0B" secondAttribute="bottom" constant="10" id="W9F-E0-NdO"/>
+                            <constraint firstItem="9Q0-bC-lr3" firstAttribute="leading" secondItem="DcR-66-pKi" secondAttribute="leading" id="a46-o0-B5f"/>
+                            <constraint firstItem="V2g-R3-Q0B" firstAttribute="trailing" secondItem="DcR-66-pKi" secondAttribute="trailing" id="bnU-kA-wWc"/>
+                            <constraint firstItem="V2g-R3-Q0B" firstAttribute="top" secondItem="9Q0-bC-lr3" secondAttribute="bottom" constant="10" id="jRV-hk-FhH"/>
+                            <constraint firstItem="nHf-xg-AhJ" firstAttribute="leading" secondItem="DcR-66-pKi" secondAttribute="leading" id="jbu-nF-63n"/>
+                            <constraint firstItem="DcR-66-pKi" firstAttribute="trailing" secondItem="nHf-xg-AhJ" secondAttribute="trailing" id="mEQ-Yb-1mH"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="7pa-iH-LkY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nSJ-yC-rtv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-630.43478260869574" y="3330.8035714285711"/>
         </scene>
         <!--Chose Cooking Level View Controller-->
         <scene sceneID="qVy-Ve-3hE">
