--- a/CookSmart/Views/RecipeCell.xib
+++ b/CookSmart/Views/RecipeCell.xib
@@ -19,10 +19,10 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dZW-hD-Cet">
                         <rect key="frame" x="0.0" y="0.0" width="286" height="120"/>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yj-7x-8QN">
-                        <rect key="frame" x="107.5" y="60.5" width="71.5" height="34.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yj-7x-8QN">
+                        <rect key="frame" x="0.0" y="83" width="286" height="37"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="0.38466639234530214" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                         <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,9 +32,11 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="dZW-hD-Cet" secondAttribute="trailing" id="6sV-SV-1CE"/>
                     <constraint firstItem="dZW-hD-Cet" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="El9-jn-pSY"/>
-                    <constraint firstAttribute="bottom" secondItem="8yj-7x-8QN" secondAttribute="bottom" constant="30" id="Uwb-bb-3s2"/>
+                    <constraint firstAttribute="bottom" secondItem="8yj-7x-8QN" secondAttribute="bottom" constant="5" id="PoD-8b-hLF"/>
                     <constraint firstItem="8yj-7x-8QN" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="aSI-26-KHT"/>
+                    <constraint firstAttribute="trailing" secondItem="8yj-7x-8QN" secondAttribute="trailing" id="cJ8-gw-HpW"/>
                     <constraint firstItem="dZW-hD-Cet" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eaK-Ne-QgD"/>
+                    <constraint firstItem="8yj-7x-8QN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="jPA-g5-K1H"/>
                     <constraint firstAttribute="bottom" secondItem="dZW-hD-Cet" secondAttribute="bottom" constant="5" id="pJx-Zw-agh"/>
                 </constraints>
             </tableViewCellContentView>
