--- a/CookSmart/Views/RecipeCell.xib
+++ b/CookSmart/Views/RecipeCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,7 +29,7 @@
                         <color key="shadowColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="ColorMain"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="dZW-hD-Cet" secondAttribute="trailing" id="6sV-SV-1CE"/>
                     <constraint firstItem="dZW-hD-Cet" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="El9-jn-pSY"/>
@@ -48,4 +49,9 @@
             <point key="canvasLocation" x="-28.985507246376812" y="136.94196428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="ColorMain">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
