--- a/CookSmart/Base.lproj/LaunchScreen.storyboard
+++ b/CookSmart/Base.lproj/LaunchScreen.storyboard
@@ -3,8 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,7 +21,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="ColorMain"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vUd-oV-VFU" secondAttribute="bottom" id="2Xt-Th-2Nc"/>
                             <constraint firstItem="vUd-oV-VFU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="IBl-EN-FZG"/>
@@ -36,9 +36,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="background" width="112" height="140"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="background" width="66.5" height="73"/>
+        <namedColor name="ColorMain">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
