--- a/CookSmart/Views/Base.lproj/Main.storyboard
+++ b/CookSmart/Views/Base.lproj/Main.storyboard
@@ -226,7 +226,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eK2-JU-z3D">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" name="ColorMain"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4En-Kn-Dz6"/>
@@ -808,7 +808,6 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="5g2-9j-7H3" firstAttribute="top" secondItem="pTT-0x-WNK" secondAttribute="top" constant="10" id="3Oy-Cw-49S"/>
                                             <constraint firstItem="IXW-UA-J2W" firstAttribute="top" secondItem="pTT-0x-WNK" secondAttribute="top" constant="15" id="5W4-0a-U0H"/>
@@ -821,10 +820,9 @@
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="31v-vP-9XA">
                                                 <rect key="frame" x="0.0" y="5" width="414" height="736"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" name="ColorMain"/>
                                             </tableView>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="31v-vP-9XA" firstAttribute="leading" secondItem="1Gl-Ib-W3R" secondAttribute="leading" id="Frg-km-EwK"/>
                                             <constraint firstItem="31v-vP-9XA" firstAttribute="top" secondItem="1Gl-Ib-W3R" secondAttribute="top" constant="5" id="hi0-BC-1PA"/>
@@ -844,7 +842,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bMi-eg-4Ai"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="ColorMain"/>
                         <constraints>
                             <constraint firstItem="QK3-nY-dHP" firstAttribute="bottom" secondItem="bMi-eg-4Ai" secondAttribute="bottom" id="1gf-ZJ-uh5"/>
                             <constraint firstItem="QK3-nY-dHP" firstAttribute="top" secondItem="bMi-eg-4Ai" secondAttribute="top" id="ANl-5z-fgT"/>
