--- a/CookSmart/Views/NewspaperCell.xib
+++ b/CookSmart/Views/NewspaperCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -33,7 +34,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" name="ColorMain"/>
                 <constraints>
                     <constraint firstItem="fbK-2l-YrR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="4Jf-kK-KpY"/>
                     <constraint firstItem="Ttv-VP-0Rd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="11" id="8si-Jz-xDZ"/>
@@ -56,4 +57,9 @@
             <point key="canvasLocation" x="99.275362318840592" y="230.35714285714283"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="ColorMain">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
