--- a/CookSmart/Views/Base.lproj/Main.storyboard
+++ b/CookSmart/Views/Base.lproj/Main.storyboard
@@ -46,16 +46,16 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b3h-3Z-LOm">
-                                <rect key="frame" x="20" y="409" width="374" height="30"/>
+                                <rect key="frame" x="20" y="409" width="374" height="70"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcW-yJ-AcS">
-                                        <rect key="frame" x="10" y="6" width="161" height="18"/>
+                                        <rect key="frame" x="12" y="5" width="161" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZR-GW-HVh">
-                                        <rect key="frame" x="171" y="-1" width="161.5" height="32"/>
+                                        <rect key="frame" x="0.0" y="28" width="161.5" height="32"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Create new account">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="15"/>
@@ -64,11 +64,11 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="leading" secondItem="OcW-yJ-AcS" secondAttribute="trailing" id="LMS-Pa-t6M"/>
-                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="centerY" secondItem="b3h-3Z-LOm" secondAttribute="centerY" id="PbJ-GE-tsx"/>
-                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="centerY" secondItem="b3h-3Z-LOm" secondAttribute="centerY" id="S3g-Hk-zLq"/>
-                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="leading" secondItem="b3h-3Z-LOm" secondAttribute="leading" constant="10" id="mgq-6C-vMb"/>
-                                    <constraint firstAttribute="height" constant="30" id="vEa-8l-uU6"/>
+                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="leading" secondItem="b3h-3Z-LOm" secondAttribute="leading" id="HS8-kN-Fo7"/>
+                                    <constraint firstItem="TZR-GW-HVh" firstAttribute="top" secondItem="OcW-yJ-AcS" secondAttribute="bottom" constant="5" id="jac-R9-v9d"/>
+                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="leading" secondItem="b3h-3Z-LOm" secondAttribute="leading" constant="12" id="mgq-6C-vMb"/>
+                                    <constraint firstItem="OcW-yJ-AcS" firstAttribute="top" secondItem="b3h-3Z-LOm" secondAttribute="top" constant="5" id="oTc-Fj-9nF"/>
+                                    <constraint firstAttribute="height" constant="70" id="vEa-8l-uU6"/>
                                 </constraints>
                             </view>
                         </subviews>
